[package]
name = "lox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "3.1.6", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter"] }
phf = { version = "0.10", features = ["macros"] }